--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Environment variables for the frontend
 
-# Backend API URL
-VITE_API_URL=http://localhost:3001
+# Backend API URL - Use your LAN IP so friends can access it
+VITE_API_URL=http://192.168.0.85:3001
