--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Environment variables for the frontend
 
-# Backend API URL
-VITE_API_URL=http://localhost:3001
+# Backend API URL - Change to your LAN IP for network access
+VITE_API_URL=http://192.168.0.85:3001
