--- a/hackathon-backend/.env.example
+++ b/hackathon-backend/.env.example
@@ -3,7 +3,7 @@ PORT=3001
 NODE_ENV=development
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://192.168.0.85:5173
+FRONTEND_URL=http://localhost:5173
 
 # API Configuration (if needed in the future)
 # NEWS_API_KEY=your_news_api_key_here
